[017-(0.0.7)]:: Settings >> Corrected z-index issues so that the settings page and sidebars interact correctly. Next steps are to finalize the look of the desktop site's dimensions as well as format all of the text output. This includes getting whatever icons I want to use for the controls. Will proceed with desktop experience before correcting values for smaller screens, even though the skeleton is there.

--- a/style.css
+++ b/style.css
@@ -120,13 +120,12 @@ nav{
   position: fixed;
   width: auto;
   height: 80vh;
-  display: fixed;
   padding: 1.6rem;
   bottom: 0;
   left: 25%;
   right: 25%;
   transform: translateY(100%);
-  z-index: 1000;
+  z-index: 900;
   background-color: #76f721;
   transition: transform .3s;
 }
@@ -164,9 +163,13 @@ nav{
 }
 .footer{
   grid-area: footer;
-  display: fixed;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 7vh;
   justify-content: center;
   background: #547e74;
+  z-index: 500;
 }
 /* ====================================== */
 
